--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -947,108 +947,107 @@ stories:
   domain: http://www.charlescitypress.com/
   link: http://www.charlescitypress.com/charlescitypress/front/2019/07/04/butterflies-released-in-remembrance-of-lost-loved-ones/
 images:
-- name: adam-smith-adam-smith-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-colored-circuits.jpg
-- name: white-house-lawn-white-house-lawn-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-pablo-blue.jpg
-- name: ellis-island-ellisisland-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-post-modern.jpg
-- name: art-albert-giacometti-Isaku Yanaihara.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-albert-giacometti-Isaku
-    Yanaihara.jpg
-- name: ellis-island-ellisisland-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-hot-spicy.jpg
-- name: abandonedbuildings_really_hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_really_hot.jpg
-- name: locked-up-steam-lock-up-steam-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-dark-rain.jpg
-- name: paris-paris-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dali-two.jpg
-- name: supreme-court-supremecourt-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-alberto-giacometti.jpg
-- name: store-on-corner-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dark-soul.jpg
-- name: downtheline-downtheline-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colored-circuits.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: store-on-corner-store-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-umberto-bocc.jpg
-- name: abandonedbuildings_dry_skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_dry_skin.jpg
-- name: old-granary-field-granaryfield-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-electricity.jpg
-- name: server-cloud-server-racks-door-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-4.jpg
-- name: crow-crow-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-blue-circuit.jpg
-- name: downtown-trucksilo-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-circuit.jpg
-- name: windowmountain-window-mountain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-internet-numbers.jpg
-- name: scream-DSC_0002.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0002.jpg
-- name: walled-garden-walled-garden-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
-- name: castle-wall-DSC-0067-atari-missle.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-atari-missle.JPG
-- name: power-lines-power-lines-empty-space-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alien-goggles.jpg
-- name: downtown-los-angeles-downtown-la-blue-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-blue-circuit.JPG
-- name: soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-sand-paper.jpg
-- name: capital-battle-capitolbattle-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-aqua.jpg
-- name: oldtrain-oldtrain-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-alien-goggles.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-purple-storm.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-smoking-cigarette.jpg
-- name: crow-crow-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
-- name: ellis-island-ellis-island-room-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-wols.jpg
-- name: old-granary-field-granaryfield-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-monet-one.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colored-circuits.JPG
-- name: old-granary-field-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-sunday.jpg
-- name: downtown-los-angeles-downtown-la-kandinsky-bv.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-kandinsky-bv.JPG
-- name: birdhouse-birdhouse-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-far-away.jpg
-- name: old-gas-pumps-oldgaspumps-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-atari-missle.jpg
-- name: oldtrain-oldtrain-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-far-away.jpg
-- name: oldhouse-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-colorful-blocks.jpg
-- name: oldhotel-oldhotel-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-constitution.jpg
-- name: border-fence-border-fence-on-hill-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-really-hot.jpg
-- name: oldhouse-granaryfield-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
-- name: mosaic-face-mosaic-face-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-collage.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-- name: art-museum-art-museum-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-copper-circuit.jpg
-- name: catacombs-catacombs-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gred-mash.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-gred-mash.jpg
-- name: crow_post_modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_post_modern.jpg
-- name: old-church-oldchurch-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-umberto-bocc.jpg
-- name: oldcabin-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin.jpg
-- name: razorcliff-razorcliff-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purple-pond.jpg
+- name: mistywoods-babyfoot-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-ww2-dresden.jpg
+- name: beach-clouds-lifeguard-beachclouds-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-emily-carr.jpg
+- name: oldhousecars-house-old-cars-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-nazi-poster.jpg
+- name: death-valley-death-valley-national-park-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-wols.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-aqua.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-aqua.png
+- name: stories-new-80-110-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-110-800-500-0-max-0--1--1.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
+- name: stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: hollywood-building-hollywood-building-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-marcel-duchamp.jpg
+- name: subway-subway-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-alberto-giacometti.jpg
+- name: dc-statue-dcstatue-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-aqua.jpg
+- name: berlinwall2-berlinwall-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-smooth-ride.jpg
+- name: oldbarn-oldbarn-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-graham-sutherland.jpg
+- name: blossombar-green-zuma-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-50-62.jpg
+- name: flower-barbed-wire-flower-barbed-wire-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-dali-two.jpg
+- name: fence-fence-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-purp-paper.jpg
+- name: rockingchair-face-2-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-crafty-painting.jpg
+- name: old-granary-field-oldhouse-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-creativity.jpg
+- name: window-window-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dry-skin.jpg
+- name: paris-paris-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-wols.jpg
+- name: copper-circuit-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0033.jpg
+- name: windowmountain-window-mountain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gan-vogh.jpg
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: rockingchair-rockingchair-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-really-hot.jpg
+- name: oldtrain-oldtrain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-purple-storm.jpg
+- name: oldsmallboat-oldsmallboat-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-nazi-poster.jpg
+- name: blossombar-dark-soul-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-24-99.jpg
+- name: border-fence-border-fence-on-hill-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-emily-carr.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-neo-instinct.jpg
+- name: adam-smith-adam-smith-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-emily-carr.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: carry-load-carryload-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-ww2-dresden.jpg
+- name: mosaic-face-mosaic-face-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-propaganda-leaflets.jpg
+- name: aws-s3-stories-legalstatue-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-legalstatue-light-dali.jpg
+- name: subway-subway-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kandinsky-bv.jpg
+- name: white-house-whitehouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-far-away.jpg
+- name: fence-fence-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-creativity.jpg
+- name: powerlines-power-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-creativity.jpg
+- name: dragon-desert-desert-dragon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-blue-circuit.jpg
+- name: sand-hand-sand-hand-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-cinnamon-rolls.jpg
+- name: bluelake-neo-instinct-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-neo-instinct-file-00-01-17-38.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-monet-one.JPG
+- name: eduardo-eduardo-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-really-hot.jpg
+- name: power-lines-power-lines-empty-space-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
+- name: rockingchair-rockingchair-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-graham-sutherland.jpg
+- name: mosaic-face-mosaic-face-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-ww2-dresden.jpg
+- name: subway-subway-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-nazi-poster.jpg
+- name: art-museum-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dark-dali.jpg
+- name: white-house-lawn-white-house-window-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gred-mash.jpg
+- name: adam-smith-adam-smith-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dry-skin.jpg
+- name: store-on-corner-oldcabin-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-purple-storm.jpg
 ---
 County Wants Money From Cities Of McMinnville And Morrison.&nbsp;Reasons Why Termites Infest Your Home And How To Avoid It.&nbsp;Condo Project On Aspinwall Under Review.&nbsp;Idris Elba Rushes To Fitting Fan During Play.&nbsp;Payroll Hiring Moderates Slightly In May.&nbsp;Some Campgrounds, Trails Reopened Near Skilak.&nbsp;Vermillion Artist Envisions Prehistoric Creatures With Scrap Metal.&nbsp;Medicare For All Will Save Lives And Money.&nbsp;
